content/mock-maximo/src/main/fabric8/route.yml
apiVersion: v1
kind: Route
metadata:
  name: maximo
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: maximo
